--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -21,7 +21,10 @@
   </div>
   <hr />
 
-  <button id="btn_refresh" class="btn" onclick="handlerRefresh()">FREE</button>
+  <button id="btn_refresh" class="btn" onclick="handlerRefresh()">Refresh</button>
+
+  <p id="logs">
+  </p>
 
   <p>
     <img id="loading-animation" class="" src="loading.gif" height="14px" />
