--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <script src=" https://d.line-scdn.net/liff/1.0/sdk.js"></script>
