--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -8,11 +8,11 @@
   <script src=" https://d.line-scdn.net/liff/1.0/sdk.js"></script>
   <script src="liff.js"></script>
   <link rel="stylesheet" type="text/css" href="liff.css" />
+  <title>USB Memory Lending</title>
 </head>
 
 <body>
   <!-- Title -->
-  <h4>USB Memory Lending Status</h4>
   <hr />
 
   <!-- Toggle LED -->
