--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -17,13 +17,13 @@
 
   <!-- Toggle LED -->
   <div class="status--layout">
-    <button id="btn_use1" class="btn btn-led-toggle" onclick="handlerToggleLed()">FREE</button>
-    <button id="btn_use2" class="btn btn-led-toggle" onclick="handlerToggleLed()">FREE</button>
-    <button id="btn_use3" class="btn btn-led-toggle" onclick="handlerToggleLed()">FREE</button>
+    <button id="btn_use1" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
+    <button id="btn_use2" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
+    <button id="btn_use3" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
   </div>
   <hr />
 
-  <button id="btn_refresh" class="btn" onclick="handlerRefresh()">Refresh</button>
+  <button id="btn_refresh" class="btn" onclick="handlerRefresh">Refresh</button>
 
   <p id="logs">
   </p>
