--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -17,9 +17,9 @@
 
   <!-- Toggle LED -->
   <div class="status--layout">
-    <button id="btn_use1" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
-    <button id="btn_use2" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
-    <button id="btn_use3" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick">FREE</button>
+    <button id="btn_use1" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('1')">FREE</button>
+    <button id="btn_use2" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('2')">FREE</button>
+    <button id="btn_use3" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('3')">FREE</button>
   </div>
   <hr />
 
