--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -23,7 +23,7 @@
   </div>
   <hr />
 
-  <button id="btn_refresh" class="btn" onclick="handlerRefresh">Refresh</button>
+  <button id="btn_refresh" class="btn" onclick="handlerRefresh()">Refresh</button>
 
   <p id="logs">
   </p>
