--- a/liff-app/index.html
+++ b/liff-app/index.html
@@ -17,8 +17,15 @@
   <!-- Title -->
   <hr />
 
+  <!-- Toggle LED -->
+  <div class="status--layout">
+    <button id="btn_use1" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('1')"></button>
+    <button id="btn_use2" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('2')"></button>
+    <button id="btn_use3" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('3')"></button>
+  </div>
+  <hr />
 
-
+  <button id="btn_refresh" class="btn" onclick="handlerRefresh()">Refresh</button>
 
   <p>
     <img id="loading-animation" class="" src="loading.gif" height="14px" />
@@ -26,15 +33,6 @@
   </p>
   <hr />
   <div id="controls" class="hidden">
-    <!-- Toggle LED -->
-    <div class="status--layout">
-      <button id="btn_use1" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('1')">FREE</button>
-      <button id="btn_use2" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('2')">FREE</button>
-      <button id="btn_use3" class="btn btn-led-toggle " onclick="handlerUseBtnOnClick('3')">FREE</button>
-    </div>
-    <hr />
-
-    <button id="btn_refresh" class="btn" onclick="handlerRefresh()">Refresh</button>
 
     <hr />
     <hr />
